# hn-hiring-search

./: .gitignore  LICENSE  README.md  pyproject.toml  render.yaml
src/: app.py  hn_api.py  outreach.py
templates/: index.html
